fixed device width issue + added z-index to navigation so it is always on top

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -199,6 +199,7 @@
 
 .navigation {
   position: absolute;
+  z-index: 10;
   bottom: 0;
   right: 0;
   width: 100%;
